--- a/app/src/main/res/drawable/editbox.xml
+++ b/app/src/main/res/drawable/editbox.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp" />
+    <stroke android:width="1dp" android:color="#09090a" />
     <gradient
         android:startColor="#f9fafa"
         android:endColor="#dadedc"
